<resources>
    <string name="app_name">Miscota</string>
    <string name="facebook_app_id">160966680659447</string>
    <string name="google_client_id">117513538493776159293</string>
    <string name="google_client_id_fb">112473988954859915288</string>
    <string name="google_client_id_fb_android">178148758618-1bl04uldamvee6cj79s59cd5635tjsui.apps.googleusercontent.com</string>
    <string name="key_emma">"9BC04886852EEe278b8f76546e05092fa"</string>
    <string name="pedido_no_registrado">Tu pedido no ha podido realizarse</string>
    <string name="google_maps_key">AIzaSyBHKx91U1-TKJDZZqfR8x_LTFsJLWgQK_w</string>
    <string name="title_user_address_list">Usar mis direcciones guardadas</string>
    <string name="title_home">Inicio</string>
    <string name="title_profile">Usuario</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="title_product">Productos</string>
    <string name="invalid_pass_user">falta usuario y contraseña para iniciar sesión</string>
    <string name="invalid_password_msg">Debe introducir una contraseña</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión o registrar-se</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">Bienvenido</string>
    <string name="invalid_username">Usuario inválido</string>
    <string name="invalid_password">La contraseña debe tener mínimo 6 carácteres \n(con almenos 1 letra y 1 número)</string>
    <string name="invalid_confirm_password">Las claves no coinciden</string>
    <string name="invalid_email">E-mail inválido</string>
    <string name="invalid_address">Dirección no válida</string>
    <string name="terms_error">Por favor acepta las condiciones de servicio primero</string>
    <string name="login_description">y disfruta de todas las ventajas</string>
    <string name="login_failed">Error en inicio se sesión</string>
    <string name="recover_failed">Añada un correo electrónico válido para recuperar su contraseña</string>
    <string name="login_with_email_failed">El correo electrónico o la contraseña introducidos no son correctos</string>
    <string name="checkout_failed">Error en el checkout</string>
    <string name="checkout_failed_message">No se ha podido realizar el pedido, por favor compruebe que no falten datos por completar</string>
    <string name="checkout_failed_message_new">No se ha podido realizar el pedido, por favor complete los datos que faltan</string>
    <string name="login_social_buttons_separator">o</string>
    <string name="put_your_email">Ponga su e-mail</string>
    <string name="put_your_name">Ponga su nombre</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿No recuerdas la contraseña?</string>
    <string name="sign_in_with_e_mail">Iniciar sesión con e-mail</string>
    <string name="continue_with_facebook">Iniciar sesión con Facebook</string>
    <string name="continue_with_google">Iniciar sesión con Google</string>
    <string name="create_account">Crear cuenta</string>
    <string name="create_account_new_app">¿No tienes cuenta? Crea tu cuenta aquí</string>
    <string name="loading">Cargando…</string>
    <string name="loading_sign_up">Creando cuenta…</string>
    <string name="loading_buy">Procesando tu compra…</string>
    <string name="signing">Iniciando sesión…</string>
    <string name="remember_password">Recordar contraseña</string>
    <string name="full_name">Nombre completo</string>
    <string name="newsletter_subscription">Acepto suscribirme a la newsletter</string>
    <string name="accept_terms_and_conditions">Acepto la política de privacidad</string>
    <string name="accept_terms_conditions">Acepto la </string>
    <string name="terms_and_conditions">política de privacidad</string>
    <string name="sign_up">Crear cuenta</string>
    <string name="sign_up_error">Error en el registro</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="address">Codigo Postal</string>
    <string name="address_new">Escribe tu código postal o dirección</string>
    <string name="already_have_account">Ya tengo cuenta Miscota</string>
    <string name="restore_password_description">Introduce tu email y te enviaremos las instrucciones de recuperación</string>
    <string name="restore_password">Recuperar contraseña</string>
    <string name="my_orders">Mis pedidos</string>
    <string name="my_profile">Mi perfil</string>
    <string name="products">Todos los \nproductos</string>
    <string name="consulting">Consultas</string>
    <string name="locate_your_store">Encuentra tu tienda</string>
    <string name="our_stores">Nuestras \ntiendas</string>
    <string name="schedule_your_order">Mis pedidos programados</string>
    <string name="next_schedule_order">Próximo pedido programados</string>
    <string name="restore_password_email_sent">Se ha enviado un email para restablecer la contraseña a tu correo electrónico</string>
    <string name="next_order_arrives_on">El pedido programado llega en %s</string>
    <string name="current_location">Ubicación actual</string>
    <string name="current_location_new">Usar mi posición actual</string>
    <string name="recent_addresses">Direcciones recientes</string>
    <string name="user_addresses">Mis direcciones</string>
    <string name="delivery_today">Entrega hoy</string>
    <string name="all_the_products">Todos los productos</string>
    <string name="sameday_products">Productos con \nEntrega Hoy</string>
    <string name="all_categories">Todos los productos</string>
    <string name="all_products_of_category">Todo</string>
    <string name="no_item_found">No item found</string>
    <string name="no_item_category">No hay productos para mostrar en esta categoria</string>
    <string name="all_categories_of"> %s</string>
    <string name="top_products">Top Products</string>
    <string name="all_products">Todos los productos</string>
    <string name="options">Opciones</string>
    <string name="options_product">Peso producto</string>
    <string name="packs_product">Unidades</string>
    <string name="quantity">Cantidad</string>
    <string name="sign_in_bottom">Iniciar sesión</string>
    <string name="login_title">Inicia con tu usuario Miscota</string>
    <string name="add_to_cart">Añadir al carrito</string>
    <string name="description">Descripción</string>
    <string name="ingredients">Ingredientes</string>
    <string name="item_added_to_cart">Se ha añadido un producto al carrito</string>
    <string name="item_dont_added_to_cart">No se ha podido añadir porque no hay stock disponible ahora</string>
    <string name="item_dont_have_stock">De este producto ya no hay stock, lo siento</string>
    <string name="item_removed_from_cart">Se ha eliminado un producto del carrito</string>
    <string name="total_price">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="choose_the_time_slot">Franja horaria</string>
    <string name="receive_it_between_11_00_a_m_and_14_00_p_m">Recibe entre 11:00 hs a 14:00 hs</string>
    <string name="receive_it_between_15_00_a_m_and_18_00_p_m">Recibe entre 15:00 hs a 18:00 hs</string>
    <string name="receive_it_between_20_00_a_m_and_22_00_p_m">Recibe entre 20:00 hs a 22:00 hs</string>
    <string name="receive_it_between_11_00_a_m_and_14_00_p_m_nextDay">Recibe entre 11:00 hs a 14:00 hs (día siguiente)</string>
    <string name="receive_it_between_15_00_a_m_and_18_00_p_m_nextDay">Recibe entre 15:00 hs a 18:00 hs (día siguiente)</string>
    <string name="receive_it_between_20_00_a_m_and_22_00_p_m_nextDay">Recibe entre 20:00 hs a 22:00 hs (día siguiente)</string>
    <string name="receive_between_11_00_a_m_and_14_00_p_m_sd">de 11:00 h a 14:00 h (sd)</string>
    <string name="receive_between_15_00_a_m_and_18_00_p_m_sd">de 15:00 h a 18:00 h (sd)</string>
    <string name="receive_between_20_00_a_m_and_22_00_p_m_sd">de 20:00 h a 22:00 h (sd)</string>
    <string name="receive_between_11_00_a_m_and_14_00_p_m_nd">de 11:00 h a 14:00 h </string>
    <string name="receive_between_15_00_a_m_and_18_00_p_m_nd">de 15:00 h a 18:00 h </string>
    <string name="receive_between_20_00_a_m_and_22_00_p_m_nd">de 20:00 h a 22:00 h </string>
    <string name="receive_between_11_00_a_m_and_14_00_p_m_nextDay">de 11:00 h a 14:00 h (nd)</string>
    <string name="receive_between_15_00_a_m_and_18_00_p_m_nextDay">de 15:00 h a 18:00 h (nd)</string>
    <string name="receive_between_20_00_a_m_and_22_00_p_m_nextDay">de 20:00 h a 22:00 h (nd)</string>
    <string name="text_dont_processed">por favor compruebe que todos los campos hayan sido completados correctamente</string>
    <string name="cart_header">Carrito</string>
    <string name="cart_tramitar_pedido">Tramitar pedido</string>
    <string name="cart_tipo_envio">Tipo de envío</string>
    <string name="add_address">Añadir dirección</string>
    <string name="same_day_off_cart">Entrega hoy no disponible</string>
    <string name="text_sameday_off_info_cart">08015, Valencia, Centro</string>
    <string name="text_default_product_name">Product name long text</string>
    <string name="text_default_discount">-10%</string>
    <string name="text_default_price">14,95 €</string>
    <string name="text_default_delivery_price">15,95 €</string>
    <string name="delivery_ecommerce">Entrega estándar</string>
    <string name="delivery_same_day">Entrega hoy</string>
    <string name="buy_now">Comprar ahora</string>
    <string name="you_are_buying_as_a_guest">Estás comprando como invitado</string>
    <string name="go_to_my_account">Ir a mi cuenta</string>
    <string name="shipping_address">Dirección de envío</string>
    <string name="change_direction">Cambiar dirección</string>
    <string name="pay_with_card">Pagar con tarjeta</string>
    <string name="use_paypal">Usar paypal</string>
    <string name="card_number">Número tarjeta</string>
    <string name="owner_name">Propietario</string>
    <string name="mm_aa">MM / AA</string>
    <string name="security_code">Código seguridad</string>
    <string name="message_conected">Compruebe tu conexión a internet para buscar una dirección</string>
    <string name="message_conected_app">Debes estar conectado a internet para utilizar nuestra aplicación</string>
    <string name="no">No</string>
    <string name="yes">Sí</string>
    <string name="bottom_sheet_title">¿Quieres pausar el pedido programado?</string>
    <string name="bottom_sheet_description">Dejarás de disfrutar de las ventajas</string>
    <string name="bottom_sheet_description2">Envío prioritario más rápido. Recibes tus pedidos automáticamente. Modifícalos cuando quieras. Atención al cliente rápida y personalizada.</string>
    <string name="title_sameday_info">Entrega hoy</string>
    <string name="first_subtitle_info_sameday">¿Que es Entrega Hoy?</string>
    <string name="second_subtitle_info_sameday">¿Como funciona?</string>
    <string name="first_text_info_sameday">Es nuestro método de envío más rápido con el \nque podrás hacer tu pedido y recibirlo el mismo \ndía en la franja horaria que desees.</string>
    <string name="second_text_info_sameday_one">1. Introduce tu código postal en la barra de \n"Entrega hoy".\n</string>
    <string name="second_text_info_sameday_two">2. Añade a tu carrito los productos con \n"la etiqueta "Entrega hoy disponible".\n</string>
    <string name="second_text_info_sameday_three">3.Selecciona en tu carrito los productos que \nquieres recibir hoy.\n</string>
    <string name="second_text_info_sameday_four">4. Recibe los productos en lo que tardas en\n dar un paseo.</string>
    <string name="first_text_sameday_off_info">PIDE AHORA, RECÍBELO HOY</string>
    <string name="search_products">¿Qué necesita tu mascota?</string>
</resources>