<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_initial"
        android:padding="0dp"
        android:title="@string/title_home"
       />

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/ic_productos_initial"
        android:padding="0dp"
        android:title="@string/title_product" />


    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_pedidos_initial"
        android:padding="0dp"
        android:title="@string/title_pedidos"
        />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_cuenta_initial"
        android:padding="0dp"
        android:title="@string/title_profile" />


</menu>