<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/create_account"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textStyle="bold"
            app:fontFamily="@font/bree_extra_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/logo_named"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="8dp"
            android:text="@string/login_description"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            style="@style/Widget.AppComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="64dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_named">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/bree_bold"
                android:hint="@string/full_name"
                android:inputType="text|textCapWords"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:textColor="@color/app_black"
                android:textColorHint="@color/app_black"
                app:fontFamily="@font/bree_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/Widget.AppComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/bree_bold"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:textColor="@color/app_black"
                android:textColorHint="@color/app_black"
                app:fontFamily="@font/bree_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/Widget.AppComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:textColorHint="@color/app_black"
                app:fontFamily="@font/bree_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordLayout"
            style="@style/Widget.AppComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:textColorHint="@color/app_black"
                app:fontFamily="@font/bree_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/address"
            style="@style/Widget.AppComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="8dp"
            android:letterSpacing="0"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
            android:text="@string/address"
            android:textAlignment="textStart"
            android:textColor="@color/app_black"
            android:textSize="16sp"
            android:theme="@style/Theme.AppComponents.Button.Address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/termsSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/accept_terms_and_conditions"
            android:textColor="@color/app_black"
            android:textSize="14sp"
            android:theme="@style/Theme.AppComponents.CheckBox"
            app:fontFamily="@font/bree_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/newsLetterSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/newsletter_subscription"
            android:textColor="@color/app_black"
            android:textSize="14sp"
            android:theme="@style/Theme.AppComponents.CheckBox"
            app:fontFamily="@font/bree_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/termsSwitch" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            style="@style/Widget.AppComponents.Button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/sign_up"
            android:textAppearance="?attr/textAppearanceBody1"
            android:theme="@style/Theme.AppComponents.Button.Secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newsLetterSwitch"
            app:strokeColor="?attr/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/Widget.AppComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/already_have_account"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/app_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
