<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_search_new"
    android:forceDarkAllowed="false">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchLayout"
        style="@style/Widget.AppComponents.Button.OutlinedButton.Search.New"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="18dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/search_products"
        android:letterSpacing="0"
        android:textAlignment="center"
        android:textColor="@color/new_app_grey"
        android:textSize="15sp"
        app:icon="@drawable/ic_lupa_search"
        app:iconTintMode="add"
        app:iconPadding="16dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/allCategoriesLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:text="@string/all_categories"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchLayout" />


    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginVertical="0dp"
    android:layout_marginHorizontal="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/allCategoriesLabel"
    tools:listitem="@layout/item_main_categories" />

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_item_found"
        android:textAppearance="?attr/textAppearanceBody1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>